<resources>
    <string name="app_name">City Atom</string>
    <string name="notification_foreground_service_title">City Atoms</string>
    <string name="notification_foreground_service_subtitle">Stay safe from COVID-19</string>
    <string name="app_desc">Track other\'s phone location with simple</string>
    <string name="sign_in_desc">Please sign in or register new account</string>
    <string name="profile">Profile</string>
    <string name="track_location">Track Location</string>
    <string name="share_location">Share Location</string>
    <string name="start">Start</string>
    <string name="device_id">Device Id:</string>
    <string name="lat_long">Lat/Long:</string>
    <string name="login">Login</string>
    <string name="stop">Stop</string>
    <string name="disconnected">diconnected</string>
    <string name="fetching">fetching...</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="register">Don\'t have an account? Create one</string>

    <string name="title_menu_edit">Edit</string>
    <string name="title_fragment_heat_map">Heat Map</string>

    <!--Login Activity-->
    <string name="wrong_password">Invalid password</string>
    <string name="invalid_username">Invalid username </string>

    <!--Register activity-->
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact">Contact Number</string>
    <string name="password">Password</string>
    <string name="empty_fstname">Please enter first name</string>
    <string name="empty_lstname">Please enter last name</string>
    <string name="empty_country">Please enter country code</string>
    <string name="empty_email">Please enter your Email</string>
    <string name="empty_contact_number">Please enter contact number</string>
    <string name="empty_password">Please enter a password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="password_mismatch">Password do not match</string>
    <string name="invalid_email">Invalid email. please use valid email</string>
    <string name="creating">Creating…</string>
    <string name="create_account_success_title">Account Created</string>
    <string name="create_account_success_message">Your Account has been created successfully.
        Please Sign in.</string>
    <string name="create_account_title">Get Started</string>
    <string name="create_account_sub_title">Please input your details to create an account</string>
    <string name="create_account">create account</string>
    <string name="no_login">Already registered? Login</string>

    <!--Alert-->
    <string name="fetch_data">Fetching data....</string>

    <string name="forgotPasswordText">Forgot Password</string>
    <string name="resetPasswordText">To reset password, enter your email, press the button and check your email for further instructions</string>
    <string name="resetPasswordBtn">Reset Password</string>
    <string name="returnToLoginTextView">Return to Login Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fst_name">First name</string>
    <string name="second_name">Last name</string>
    <string name="agreement">I agreed with City Atom’s Terms of Service and Private Policy</string>
    <string name="undefined">UNDEFINED</string>
    <string name="terms_and_conditions">Please agree to the terms and conditions</string>
    <string name="title_activity_simple_symptoms">SimpleSymptoms</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_simple_feeling">SimpleFeeling</string>
    <string name="title_activity_health_monitor">HealthMonitor</string>

    <string name="close">Close</string>
    <string name="open">Open</string>

    <string name="title_nav_heat_map">Heat Map</string>
    <string name="title_nav_health_monitor">Health Monitor</string>
    <string name="title_nav_about">About</string>
    <string name="title_nav_privacy">Privacy</string>
    <string name="title_nav_services">Terms of Services</string>
    <string name="title_nav_cookies">Cookies Policy</string>
    <string name="title_nav_sign_out">Sign Out</string>

</resources>
